[gd_scene load_steps=5 format=3 uid="uid://ddo7vdsp87alq"]

[ext_resource type="Script" uid="uid://k6eiy0y83fe2" path="res://scripts/characters/projectile.gd" id="1_gotcb"]
[ext_resource type="Texture2D" uid="uid://ir175wr36h37" path="res://assets/Shooter Traps/Sprites/Seashell/Pearl Idle/1.png" id="2_6i0yc"]
[ext_resource type="PackedScene" uid="uid://l4sru2cocgcx" path="res://scenes/environment/debries/pearl_debries.tscn" id="3_whnx8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n7c7r"]
radius = 3.0

[node name="Pearl" type="Area2D"]
collision_layer = 2097152
collision_mask = 513
script = ExtResource("1_gotcb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -3)
texture = ExtResource("2_6i0yc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_n7c7r")

[node name="TtlTimer" type="Timer" parent="."]
one_shot = true

[node name="Debries" parent="." instance=ExtResource("3_whnx8")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TtlTimer" to="." method="_destroy"]
